--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h1, h2, h3 {
 	}
 }
 
-#door {
-    cursor: pointer;
-    transition: all 0.5s ease;
+/* Hide the SVG */
+#vis-svg-2 {
+	display: none;
 }
